--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.1-solc-0.7-2",
     "@openzeppelin/test-helpers": "^0.5.10",
-    "@uniswap/v3-core": "*",
-    "@uniswap/v3-periphery": "*",
     "@truffle/hdwallet-provider": "^1.0.43",
+    "@uniswap/v3-core": "1.00",
+    "@uniswap/v3-periphery": "1.1.1",
+    "ethers": "^5.4.4",
     "truffle": "^5.3.7",
+    "truffle-contract-size": "^2.0.1",
     "truffle-flattener": "^1.5.0"
   },
   "devDependencies": {
